rendered/envs/friclu/fritzgpt/ingress-oneshot-stream.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: nginx
    app.kubernetes.io/name: oneshot
  name: oneshot-stream
  namespace: fritzgpt
spec:
  ingressClassName: nginx
  rules:
    - host: fritzgptstream.duchardt.net
      http:
        paths:
          - backend:
              service:
                name: oneshot
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fritzgptstream.duchardt.net
      secretName: oneshot-certificate
